2005-02-23  Jan Kiszka <kiszka@rts.uni-hannover.de>

	* include/nucleus/thread.h: Make sure that spare bits are defined
	in a section accessible from user-space applications.

2005-04-24  Philippe Gerum  <rpm@xenomai.org>

	* include/nucleus/version.h: Add FUSION_VERSION() macro to mangle
	a version code from a major/minor/revision triplet.
	
	* include/nucleus/types.h: Stop shouting, rename ROOT_THREAD_*
	routines to lowercase versions.

2005-04-23  Philippe Gerum  <rpm@xenomai.org>

	* include/nucleus/asm-uvm/system.h (xnarch_timer_thread): Use
	pthread_set_periodic_rt()/pthread_wait_period_rt() instead of
	nanosleep() to get a more accurate timeline.

2005-04-22  Philippe Gerum  <rpm@xenomai.org>

	* skins/rtai/syscall.c (__rt_task_set_mode): Add T_PRIMARY bit to
	switch to primary/secondary mode (depends on this bit being set
	into setmask/clrmask).

	* skins/rtai/task.c (rt_task_set_mode): Accept T_SHIELD as we
	should.

	* include/nucleus/asm-generic/syscall.h: Add conforming domain
	exec bit, ensuring that calling shadows are switched to primary
	mode before entering the syscall, whilst the latter is fired over
	the Linux domain for regular Linux tasks.

	* skins/psos+/demos, skins/vxworks/demos: Create per-skin demo
	directory, illustrating the use of the RTOS emulators over the UVM
	and simulator engines.

2005-04-20  Philippe Gerum  <rpm@xenomai.org>

	* arch/*/Kconfig: Give better hints about setting RTAI_HW_FPU.

2005-04-18  Philippe Gerum  <rpm@xenomai.org>

 	* RELEASE: fusion-0.7.2

2005-04-17  Philippe Gerum  <rpm@xenomai.org>

	* arch/i386/patches: Add preliminary support for experimental
	PREEMPT_RT kernels over Adeos: 2.6.12-rc2-RT-V0.7.44-03.

	* nucleus/shadow.c (xnshadow_start): Set CPU affinity as defined
	by xnpod_start_thread().

	* arch/i386/patches: Upgrade to Adeos 2.6.9,10,11-i386-r10c3.
	
	* skins/rtai/syscall.c (__rt_task_create): Pass the new task's CPU
	affinity settings to rt_task_create() as needed.
