@@ -330,6 +330,19 @@ else
   RTAI_PIPE_NRDEV=-1
 fi
 
+AC_MSG_CHECKING(for the system heap size)
+AC_ARG_ENABLE(nucleus-heap-size,
+	AS_HELP_STRING([--enable-nucleus-heap-size], [Set size of the system heap (Kb)]),
+	[case "$enableval" in
+	[[0-9]]*) CONFIG_RTAI_OPT_SYS_HEAPSZ=$enableval ;;
+	*) AC_MSG_ERROR([Bad argument to option: --enable-nucleus-heap-size=<number>]) ;;
+	esac])
+if test x$CONFIG_RTAI_OPT_SYS_HEAPSZ = x ; then
+  # Use a reasonable default if unset
+  CONFIG_RTAI_OPT_SYS_HEAPSZ=128
+fi
+AC_MSG_RESULT([$CONFIG_RTAI_OPT_SYS_HEAPSZ Kbytes])
+
 AC_MSG_CHECKING(for per-cpu timer list)
 AC_ARG_ENABLE(percpu-timer,
 	AS_HELP_STRING([--enable-percpu-timer], 
@@ -1046,6 +1059,7 @@ AM_CONDITIONAL(CONFIG_RTAI_HW_FPU,[test "$CONFIG_RTAI_HW_FPU" = y])
 dnl Nucleus options
 AM_CONDITIONAL(CONFIG_RTAI_OPT_FUSION,[test x$CONFIG_RTAI_OPT_FUSION = xy])
 AM_CONDITIONAL(CONFIG_RTAI_OPT_PIPE,[test x$CONFIG_RTAI_OPT_PIPE = xy])
+AC_DEFINE_UNQUOTED(CONFIG_RTAI_OPT_SYS_HEAPSZ,$CONFIG_RTAI_OPT_SYS_HEAPSZ,[Kconfig])
 
 dnl Supported skins
 AM_CONDITIONAL(CONFIG_RTAI_SKIN_POSIX,[test x$CONFIG_RTAI_SKIN_POSIX = xy])
